# PACMAN

./: CMakeLists.txt  install_sdl.sh
src/: main.cpp
src/Entity/: Fruit.cpp  Fruit.h  Ghost.cpp  Ghost.h  Pacman.cpp  Pacman.h
src/Game/: Game.cpp  Game.h
src/Map/: Map.cpp  Map.h
src/Menu/: Button.cpp  Button.h  GameRules.cpp  GameRules.h  Menu.cpp  Menu.h  OptionsMenu.cpp  OptionsMenu.h
